# Arandu-maxi

./: .gitignore  AGENTS.md  README.md  THIS-PROJECTS-CURRENT-STATE.md  WORKING_DIRECTORY_WARNING.md  ikllama.cpp supported models.md  scratchpad.md  tools.yaml
.cursor/: rules.md
.github/workflows/: build.yml
backend/: Cargo.toml  huggingface.rs  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: chat_manager.rs  chat_models.rs  config.rs  discovery.rs  downloader.rs  gguf_parser.rs  huggingface.rs  huggingface_downloader.rs  lib.rs  llama_client.rs  llamacpp_manager.rs  main.rs  models.rs  openai_proxy.rs  openai_types.rs  parameter_controller.rs  peer_cache.rs  process.rs  scanner.rs  system_monitor.rs  tracker_manager.rs  tracker_scraper.rs  update_checker.rs
docs/: CURRENT_WORKING_STATE.md  DOCUMENTATION-SUMMARY-2026-03-04.md  INDEX.md  LAN-CONNECTION-GUIDE.md  OPENAI_PROXY_CLIENT_GUIDE.md  README.md  ROADMAP.md  USER-MANUAL.md  create-diagram-detailed.py  create-diagram.py  design-philosophy-detailed.md  design-philosophy.md
docs/knowledge-base/: 2026-02-25-chat-restart-contract-fix.md  2026-02-27-chat-history-navigation-continuation.md  2026-02-28-chat-history-button-fix.md  2026-02-28-chat-history-freeze-rebuild-log.md  2026-02-28-chat-history-freezing-fix.md  2026-02-28-chat-history-plan-update.md  2026-02-28-chat-history-verification-run.md  2026-02-28-docs-index-update.md  2026-02-28-last-used-model-chat-area-validation.md  2026-02-28-network-discovery-bugs-fixed.md  2026-02-28-network-discovery-complete-fix.md  2026-02-28-network-discovery-implementation.md  2026-02-28-network-discovery-models-fix.md  2026-02-28-network-discovery-root-cause-fix.md  2026-02-28-python-process-cleanup-targeted.md  2026-02-28-python-process-cleanup.md  2026-02-28-settings-window-positioning-fix.md  2026-02-28-working-directory-warning-update.md  2026-03-01-axum-handler-trait-fix-analysis.md  2026-03-01-canonical-working-baseline-locked.md  2026-03-01-continuous-memory-save-rule.md  2026-03-01-critical-fixes-complete-cors-port.md  2026-03-01-discovery-auto-start-on-launch.md  2026-03-01-discovery-cache-reliability-and-always-on-server.md  2026-03-01-discovery-log-no-recv-notice.md  2026-03-01-discovery-recv-logging-enhancement.md  2026-03-01-discovery-recv-logging-fix-verification.md  2026-03-01-discovery-send-rate-and-peer-cache-root-cause-fix.md  2026-03-01-discovery-systematic-step-by-step-fix-pass.md  2026-03-01-discovery-udp-firewall-fix.md  2026-03-01-fake-discovery-model-test-button.md  2026-03-01-file-location-reference-cors-port-fixes.md  2026-03-01-main-folder-md-audit.md  2026-03-01-memory-bank-activation-and-tracking.md  2026-03-01-opencode-config-created.md  2026-03-01-opencode-config-hardened.md  2026-03-01-peer-model-cache-implementation.md  2026-03-01-port-config-and-cors-fix.md  2026-03-01-rebuild-after-discovery-auto-start.md  2026-03-01-rebuild-and-remote-interaction-verification.md  (+44 more)
docs/plans/: 2025-02-20-hf-search-autofill-design.md  2025-02-21-openai-proxy-implementation.md  2025-02-21-task-6-chat-completions.md  2025-02-21-tracker-hybrid-search-design.md  2025-02-21-tracker-hybrid-search-implementation.md  2026-02-22-chat-input-layout-design.md  2026-02-22-chat-input-layout-implementation.md  2026-02-24-mcp-integration-design.md  2026-02-24-mcp-integration-implementation-plan.md  2026-02-24-mcp-runtime-smoke-checklist.md  2026-02-27-chat-history-navigation-design.md  2026-02-28-discovery-debug-logging.md  2026-03-01-discovery-cache-systematic-fix-plan.md  2026-03-01-remote-model-cache-diff-design.md  2026-03-01-remote-model-launch-implementation.md  2026-03-04-chat-benchmark-log-button-and-panel.md  2026-03-04-context-compression-rope-yarn-plan.md  2026-03-04-in-chat-active-model-switcher-implementation.md  2026-03-06-mcp-runtime-tool-usage-implementation.md  (+6 more)
frontend/: chat-stream-smoke.mjs  desktop.js  huggingface-suggestions.json  index.html  model-settings-config.json
scripts/: test-cli.js
(+26 files in other folders)
