[package]
name = "Arandu"
version = "0.5.5-beta"
description = "Arandu: Desktop UI for llama.cpp model management and server launching"
authors = ["Alfredo Fernandes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "llama_os_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
glob = "0.3"
regex = "1.12.3"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
thiserror = "2.0.18"
anyhow = "1.0.101"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
bytes = "1.11.1"
futures-util = "0.3"
md5 = "0.8"
dirs = "6.0"
urlencoding = "2.1"
sysinfo = { version = "0.38.1", features = ["serde"] }
nvml-wrapper = "0.11.0"
zip = "7.4.0"
url = "2.5.8"
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"

